crates/aranya-policy-compiler/src/hir/visit/snapshots/aranya_policy_compiler__hir__visit__tests__test_function.snap
---
source: crates/aranya-policy-compiler/src/hir/visit/tests.rs
expression: "&visitor.items"
---
[
  {
    "FuncDef": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 1,
        "end": 1
      },
      "ident": {
        "idx": 1,
        "version": 1
      },
      "args": [
        {
          "idx": 1,
          "version": 1
        },
        {
          "idx": 2,
          "version": 1
        }
      ],
      "result": {
        "idx": 3,
        "version": 1
      },
      "block": {
        "idx": 1,
        "version": 1
      }
    }
  },
  {
    "FuncArg": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": {
        "idx": 2,
        "version": 1
      },
      "ty": {
        "idx": 1,
        "version": 1
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "a"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "FuncArg": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": {
        "idx": 3,
        "version": 1
      },
      "ty": {
        "idx": 2,
        "version": 1
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "b"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "Block": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 38,
        "end": 38
      },
      "stmts": [
        {
          "idx": 1,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 38,
        "end": 38
      },
      "kind": {
        "Return": {
          "expr": {
            "idx": 3,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Add": [
          {
            "idx": 1,
            "version": 1
          },
          {
            "idx": 2,
            "version": 1
          }
        ]
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Identifier": {
          "idx": 4,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "a"
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Identifier": {
          "idx": 5,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "b"
    }
  },
  {
    "FuncDef": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 54,
        "end": 54
      },
      "ident": {
        "idx": 6,
        "version": 1
      },
      "args": [
        {
          "idx": 3,
          "version": 1
        },
        {
          "idx": 4,
          "version": 1
        }
      ],
      "result": {
        "idx": 6,
        "version": 1
      },
      "block": {
        "idx": 2,
        "version": 1
      }
    }
  },
  {
    "FuncArg": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": {
        "idx": 7,
        "version": 1
      },
      "ty": {
        "idx": 4,
        "version": 1
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 7,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "x"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "FuncArg": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": {
        "idx": 8,
        "version": 1
      },
      "ty": {
        "idx": 5,
        "version": 1
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 8,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "y"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 6,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "Block": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 96,
        "end": 96
      },
      "stmts": [
        {
          "idx": 2,
          "version": 1
        },
        {
          "idx": 3,
          "version": 1
        }
      ]
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 96,
        "end": 96
      },
      "kind": {
        "Let": {
          "ident": {
            "idx": 9,
            "version": 1
          },
          "expr": {
            "idx": 6,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 9,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "result"
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 6,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Add": [
          {
            "idx": 4,
            "version": 1
          },
          {
            "idx": 5,
            "version": 1
          }
        ]
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Identifier": {
          "idx": 10,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 10,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "x"
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Identifier": {
          "idx": 11,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 11,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "y"
    }
  },
  {
    "Stmt": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 119,
        "end": 119
      },
      "kind": {
        "Return": {
          "expr": {
            "idx": 7,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Expr": {
      "id": {
        "idx": 7,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Identifier": {
          "idx": 12,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 12,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "result"
    }
  }
]
