crates/aranya-policy-compiler/src/hir/visit/snapshots/aranya_policy_compiler__hir__visit__tests__test_struct_refs.snap
---
source: crates/aranya-policy-compiler/src/hir/visit/tests.rs
expression: "&visitor.items"
---
[
  {
    "StructDef": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 1,
        "end": 1
      },
      "ident": {
        "idx": 1,
        "version": 1
      },
      "items": [
        {
          "idx": 1,
          "version": 1
        },
        {
          "idx": 2,
          "version": 1
        }
      ]
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 2,
            "version": 1
          },
          "ty": {
            "idx": 1,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "x"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 1,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 3,
            "version": 1
          },
          "ty": {
            "idx": 2,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "y"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "StructDef": {
      "id": {
        "idx": 2,
        "version": 1
      },
      "span": {
        "start": 41,
        "end": 41
      },
      "ident": {
        "idx": 4,
        "version": 1
      },
      "items": [
        {
          "idx": 3,
          "version": 1
        },
        {
          "idx": 4,
          "version": 1
        }
      ]
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 5,
            "version": 1
          },
          "ty": {
            "idx": 3,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "width"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 6,
            "version": 1
          },
          "ty": {
            "idx": 4,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 6,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "height"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "Int"
    }
  },
  {
    "StructDef": {
      "id": {
        "idx": 3,
        "version": 1
      },
      "span": {
        "start": 129,
        "end": 129
      },
      "ident": {
        "idx": 7,
        "version": 1
      },
      "items": [
        {
          "idx": 5,
          "version": 1
        },
        {
          "idx": 6,
          "version": 1
        }
      ]
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "StructRef": {
          "idx": 8,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 8,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "Point"
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 6,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "StructRef": {
          "idx": 9,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 9,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "Size"
    }
  },
  {
    "StructDef": {
      "id": {
        "idx": 4,
        "version": 1
      },
      "span": {
        "start": 216,
        "end": 216
      },
      "ident": {
        "idx": 10,
        "version": 1
      },
      "items": [
        {
          "idx": 7,
          "version": 1
        },
        {
          "idx": 8,
          "version": 1
        },
        {
          "idx": 9,
          "version": 1
        },
        {
          "idx": 10,
          "version": 1
        }
      ]
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 7,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 11,
            "version": 1
          },
          "ty": {
            "idx": 5,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 11,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "name"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 5,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "String"
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 8,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "StructRef": {
          "idx": 12,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 12,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "Point"
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 9,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "StructRef": {
          "idx": 13,
          "version": 1
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 13,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "Size"
    }
  },
  {
    "StructField": {
      "id": {
        "idx": 10,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": {
        "Field": {
          "ident": {
            "idx": 14,
            "version": 1
          },
          "ty": {
            "idx": 6,
            "version": 1
          }
        }
      }
    }
  },
  {
    "Ident": {
      "id": {
        "idx": 14,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "ident": "color"
    }
  },
  {
    "VType": {
      "id": {
        "idx": 6,
        "version": 1
      },
      "span": {
        "start": 0,
        "end": 0
      },
      "kind": "String"
    }
  }
]
